# face-verification-service

./: .flake8  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  alembic_kube.ini  pyproject.toml  pytest.ini  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/app/: Dockerfile
alembic/: env.py
helm/: Chart.yaml
helm/templates/: deployment.yaml
kuzora-face-verification/: values.yaml
kuzora-face-verification/templates/: pvc.yaml
kuzora-face-verification/values/: test.yaml
manifests/: configMap.yml  deployment.yml  job.yml  pvc.yml  service.yml
src/app/: __init__.py  main.py  service.py
src/app/api/: handlers.py
src/app/api/healthz/: handlers_healthz.py
src/app/core/: __init__.py  config.py  errors.py  face_verification.py  models.py
src/app/system/: __init__.py  runner.py
src/config/: config-compose.yml  config-kube.yml  config-local.yml
src/tests/: __init__.py  test_main.py
src/tests/integration/: __init__.py  conftest.py  test_face_verification.py  test_handlers.py  test_main.py  test_service.py
src/tests/unit/: conftest.py  test_service.py
src/tests/unit/core/: conftest.py  test_config.py  test_face_verification.py
