[tool.poetry]
name = "face_recognition_service"
version = "0.5.0"
description = ""
authors = ["Georgiy Kuzora <georgiy@kuzora.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
deepface = "0.0.92"
tf-keras = "2.16.0"
fastapi = "0.111.1"
pydantic-settings = "2.3.4"
pyyaml = "6.0.1"
aiokafka = "0.11.0"
brotli = "1.1.0"
SQLAlchemy = "2.0.32"
psycopg2-binary = "2.9.9"
alembic = "1.13.2"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.19.2"
pytest = "^8.2.2"
mypy = "^1.10.1"
coverage = "*"
coverage-conditional-plugin = "*"
pytest-cov = "*"
pytest-asyncio = "*"
anyio = { version = "^4.4.0", extras = ["trio"] }
types-PyYAML = "^6.0.12.20240808"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
